@@ -12,6 +12,7 @@ import java.io.*;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -24,15 +25,17 @@ public final class StartupActionScriptManager {
   @ApiStatus.Internal
   public static synchronized void executeActionScript() throws IOException {
     Path scriptFile = getActionScriptFile();
-    if (Files.isRegularFile(scriptFile)) {
-      try {
-        List<ActionCommand> commands = loadActionScript(scriptFile);
-        for (ActionCommand command : commands) {
-          command.execute();
-        }
+    List<ActionCommand> commands = null;
+    try {
+      commands = loadActionScript(scriptFile);
+      for (ActionCommand command : commands) {
+        command.execute();
       }
-      finally {
-        Files.deleteIfExists(scriptFile);  // deleting a file should not cause an exception
+    }
+    finally {
+      // deleting a file should not cause an exception
+      if (commands == null /* error occurred on load */ || !commands.isEmpty() /* not empty list means that there is some data */) {
+        Files.deleteIfExists(scriptFile);
       }
     }
   }
@@ -60,24 +63,19 @@ public final class StartupActionScriptManager {
       }
     }
     else {
-      List<ActionCommand> script = new ArrayList<>(), originalScript = null;
       Path scriptFile = getActionScriptFile();
-      if (Files.exists(scriptFile)) {
-        originalScript = loadActionScript(scriptFile);
-        script.addAll(originalScript);
-      }
+      List<ActionCommand> savedScript = loadActionScript(scriptFile);
+      List<ActionCommand> script = new ArrayList<>(savedScript.size() + commands.size());
+      script.addAll(savedScript);
       script.addAll(commands);
-
       try {
         saveActionScript(script, scriptFile);
       }
       catch (Throwable t) {
-        if (originalScript != null) {
-          try {
-            saveActionScript(originalScript, scriptFile);
-          }
-          catch (Throwable tt) { t.addSuppressed(tt); }
+        try {
+          saveActionScript(savedScript, scriptFile);
         }
+        catch (Throwable tt) { t.addSuppressed(tt); }
         throw t;
       }
     }
@@ -89,17 +87,25 @@ public final class StartupActionScriptManager {
 
   @ApiStatus.Internal
   public static @NotNull List<ActionCommand> loadActionScript(@NotNull Path scriptFile) throws IOException {
-    try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(scriptFile))) {
-      Object data = ois.readObject();
+    try (InputStream inputStream = Files.newInputStream(scriptFile)) {
+      // don't load ObjectInputStream if file doesn't exist
+      Object data;
+      try (ObjectInputStream stream = new ObjectInputStream(inputStream)) {
+        data = stream.readObject();
+      }
+
       if (data instanceof ActionCommand[]) {
         return Arrays.asList((ActionCommand[])data);
       }
+      else if (data instanceof List && ((List<?>)data).isEmpty()) {
+        return Collections.emptyList();
+      }
       else {
-        throw new IOException("An unexpected object: " + data + "/" + data.getClass() + " in " + scriptFile);
+        throw new IOException("An unexpected object: " + data + "/" + data.getClass());
       }
     }
     catch (NoSuchFileException | AccessDeniedException e) {
-      return List.of();
+      return Collections.emptyList();
     }
     catch (ReflectiveOperationException e) {
       throw (StreamCorruptedException)new StreamCorruptedException("Stream error: " + scriptFile).initCause(e);
