@@ -7,15 +7,18 @@ import com.intellij.ide.BootstrapBundle;
 import com.intellij.ide.actions.ImportSettingsFilenameFilter;
 import com.intellij.ide.cloudConfig.CloudConfigProvider;
 import com.intellij.ide.highlighter.ArchiveFileType;
-import com.intellij.ide.plugins.*;
+import com.intellij.ide.plugins.IdeaPluginDescriptorImpl;
+import com.intellij.ide.plugins.PluginDescriptorLoader;
+import com.intellij.ide.plugins.PluginInstaller;
+import com.intellij.ide.plugins.PluginManagerCore;
 import com.intellij.ide.startup.StartupActionScriptManager;
-import com.intellij.ide.startup.StartupActionScriptManager.ActionCommand;
 import com.intellij.idea.Main;
 import com.intellij.idea.SplashManager;
 import com.intellij.openapi.components.StoragePathMacros;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.fileTypes.FileTypeRegistry;
+import com.intellij.openapi.keymap.KeymapManager;
 import com.intellij.openapi.keymap.impl.KeymapManagerImpl;
 import com.intellij.openapi.progress.EmptyProgressIndicator;
 import com.intellij.openapi.progress.ProcessCanceledException;
@@ -44,8 +47,8 @@ import java.awt.*;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.DosFileAttributes;
 import java.nio.file.attribute.FileTime;
 import java.time.Instant;
@@ -71,7 +74,6 @@ public final class ConfigImportHelper {
   private static final String FIRST_SESSION_KEY = "intellij.first.ide.session";
   private static final String CONFIG_IMPORTED_IN_CURRENT_SESSION_KEY = "intellij.config.imported.in.current.session";
   public static final String CONFIG_IMPORTED_FROM_OTHER_PRODUCT_KEY = "intellij.config.imported.from.other.product";
-  public static final String CONFIG_IMPORTED_FROM_PREVIOUS_VERSION_KEY = "intellij.config.imported.from.previous.version";
 
   private static final String CONFIG = "config";
   private static final String[] OPTIONS = {
@@ -122,7 +124,7 @@ public final class ConfigImportHelper {
       Pair<Path, Path> oldConfigDirAndOldIdePath = null;
       if (customMigrationOption != null) {
         log.info("Custom migration option: " + customMigrationOption);
-        vmOptionFileChanged = doesVmOptionsFileExist(newConfigDir);
+        vmOptionFileChanged = doesVmOptionFileExist(newConfigDir);
         try {
           if (customMigrationOption instanceof CustomConfigMigrationOption.MigrateFromCustomPlace) {
             tempBackup = backupCurrentConfigToTempAndDelete(newConfigDir, log, false);
@@ -181,21 +183,14 @@ public final class ConfigImportHelper {
 
         ConfigImportOptions configImportOptions = new ConfigImportOptions(log);
         if (!guessedOldConfigDirs.fromSameProduct) {
-          // do not import plugins from other products even if configs are imported
+          // Don't import plugins from other product even if configs are imported
           configImportOptions.importPlugins = false;
-          configImportOptions.importSettings = settings;
+          System.setProperty(CONFIG_IMPORTED_FROM_OTHER_PRODUCT_KEY, oldConfigDir.getFileName().toString());
           importScenarioStatistics = IMPORTED_FROM_OTHER_PRODUCT;
         }
         else if (importScenarioStatistics == null) {
           importScenarioStatistics = IMPORTED_FROM_PREVIOUS_VERSION;
         }
-
-        if (guessedOldConfigDirs.fromSameProduct) {
-          System.setProperty(CONFIG_IMPORTED_FROM_PREVIOUS_VERSION_KEY, oldConfigDir.toString());
-        } else {
-          System.setProperty(CONFIG_IMPORTED_FROM_OTHER_PRODUCT_KEY, oldConfigDir.toString());
-        }
-
         doImport(oldConfigDir, newConfigDir, oldIdeHome, log, configImportOptions);
 
         if (settings != null) {
@@ -212,7 +207,7 @@ public final class ConfigImportHelper {
       }
 
       ImportOldConfigsState.getInstance().reportImportScenario(importScenarioStatistics);
-      vmOptionFileChanged |= doesVmOptionsFileExist(newConfigDir);
+      vmOptionFileChanged |= doesVmOptionFileExist(newConfigDir);
     }
     finally {
       if (tempBackup != null) {
@@ -253,13 +248,13 @@ public final class ConfigImportHelper {
     return null;
   }
 
-  private static boolean isConfigOld(FileTime time) {
-    Instant deadline = Instant.now().minus(180, ChronoUnit.DAYS);
+  private static boolean isConfigOld(@NotNull FileTime time) {
+    Instant deadline = Instant.now().minus(6 * 30, ChronoUnit.DAYS);
     return time.toInstant().compareTo(deadline) < 0;
   }
 
-  private static boolean doesVmOptionsFileExist(Path configDir) {
-    return Files.isRegularFile(configDir.resolve(VMOptions.getFileName()));
+  private static boolean doesVmOptionFileExist(@NotNull Path configDir) {
+    return Files.isRegularFile(configDir.resolve(VMOptions.getCustomVMOptionsFileName()));
   }
 
   private static void restart() {
@@ -282,11 +277,11 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static File backupCurrentConfigToTempAndDelete(Path currentConfig, Logger log, boolean smartDelete) throws IOException {
-    Path configDir = PathManager.getConfigDir();
-    File tempBackupDir = FileUtil.createTempDirectory(configDir.getFileName().toString(), "-backup-" + UUID.randomUUID());
+  @NotNull
+  private static File backupCurrentConfigToTempAndDelete(@NotNull Path currentConfig, @NotNull Logger log, boolean smartDelete) throws IOException {
+    File tempBackupDir = FileUtil.createTempDirectory(getConfigDirName(), "-backup-" + UUID.randomUUID());
     log.info("Backup config from " + currentConfig + " to " + tempBackupDir);
-    FileUtil.copyDir(configDir.toFile(), tempBackupDir, file -> !shouldSkipFileDuringImport(file.getName()));
+    FileUtil.copyDir(PathManager.getConfigDir().toFile(), tempBackupDir, file -> !shouldSkipFileDuringImport(file.getName()));
 
     deleteCurrentConfigDir(currentConfig, log, smartDelete);
 
@@ -306,7 +301,7 @@ public final class ConfigImportHelper {
     return tempBackupDir;
   }
 
-  private static void deleteCurrentConfigDir(Path currentConfig, Logger log, boolean smartDelete) throws IOException {
+  private static void deleteCurrentConfigDir(@NotNull Path currentConfig, @NotNull Logger log, boolean smartDelete) throws IOException {
     log.debug("Removing current config directory, smartDelete: " + smartDelete);
     if (!smartDelete) {
       FileUtil.delete(currentConfig);
@@ -332,8 +327,13 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static void moveTempBackupToStandardBackup(File backupToMove) throws IOException {
+  private static void moveTempBackupToStandardBackup(@NotNull File backupToMove) throws IOException {
     new ConfigBackup(PathManager.getConfigDir()).moveToBackup(backupToMove);
+  }
+
+  @NotNull
+  static String getConfigDirName() {
+    return PathManager.getConfigDir().getFileName().toString();
   }
 
   private static boolean shouldAskForConfig() {
@@ -346,8 +346,10 @@ public final class ConfigImportHelper {
            "true".equals(showImportDialog);
   }
 
-  private static @Nullable Pair<Path, Path> showDialogAndGetOldConfigPath(List<Path> guessedOldConfigDirs) {
-    ImportOldConfigsPanel dialog = new ImportOldConfigsPanel(guessedOldConfigDirs, ConfigImportHelper::findConfigDirectoryByPath);
+  @Nullable
+  private static Pair<Path, Path> showDialogAndGetOldConfigPath(@NotNull List<Path> guessedOldConfigDirs) {
+    ImportOldConfigsPanel dialog = new ImportOldConfigsPanel(guessedOldConfigDirs,
+                                                             ConfigImportHelper::findConfigDirectoryByPath);
     dialog.setModalityType(Dialog.ModalityType.TOOLKIT_MODAL);
     AppUIUtil.updateWindowIcon(dialog);
 
@@ -366,7 +368,7 @@ public final class ConfigImportHelper {
   }
 
   /**
-   * Checks that current user is a "new" one (i.e. this is the very first launch of the IDE on this machine).
+   * Checks that current user is "new", i. e. this is the first launch of the IDE on this machine.
    */
   public static boolean isNewUser() {
     return isFirstSession() && !isConfigImported();
@@ -495,7 +497,7 @@ public final class ConfigImportHelper {
       exact = false;
     }
     else {
-      return new ConfigDirsSearchResult(List.of(), true);
+      return new ConfigDirsSearchResult(Collections.emptyList(), true);
     }
 
     List<Pair<Path, FileTime>> lastModified = new ArrayList<>();
@@ -528,7 +530,7 @@ public final class ConfigImportHelper {
     return new ConfigDirsSearchResult(lastModified, exact);
   }
 
-  private static boolean nameMatchesPrefix(String name, String prefix, boolean dotted) {
+  private static boolean nameMatchesPrefix(@NotNull String name, @NotNull String prefix, boolean dotted) {
     return StringUtil.startsWithIgnoreCase(name, dotted ? '.' + prefix : prefix);
   }
 
@@ -683,7 +685,11 @@ public final class ConfigImportHelper {
     return FileUtil.expandUserHome(StringUtil.unquoteString(dir, '"'));
   }
 
-  private static void doImport(Path oldConfigDir, Path newConfigDir, @Nullable Path oldIdeHome, Logger log, ConfigImportOptions importOptions) {
+  private static void doImport(@NotNull Path oldConfigDir,
+                               @NotNull Path newConfigDir,
+                               @Nullable Path oldIdeHome,
+                               @NotNull Logger log,
+                               @NotNull ConfigImportOptions configImportOptions) {
     if (oldConfigDir.equals(newConfigDir)) {
       log.info("New config directory is the same as the old one, no import needed.");
       return;
@@ -706,7 +712,7 @@ public final class ConfigImportHelper {
       log.info(String.format(
         "Importing configs: oldConfigDir=[%s], newConfigDir=[%s], oldIdeHome=[%s], oldPluginsDir=[%s], newPluginsDir=[%s]",
         oldConfigDir, newConfigDir, oldIdeHome, oldPluginsDir, newPluginsDir));
-      doImport(oldConfigDir, newConfigDir, oldIdeHome, oldPluginsDir, newPluginsDir, importOptions);
+      doImport(oldConfigDir, newConfigDir, oldIdeHome, oldPluginsDir, newPluginsDir, configImportOptions);
     }
     catch (Exception e) {
       log.warn(e);
@@ -719,7 +725,6 @@ public final class ConfigImportHelper {
     final Logger log;
     boolean headless;
     boolean importPlugins = true;
-    @Nullable ConfigImportSettings importSettings;
     BuildNumber compatibleBuildNumber = null;
     ThrowableNotNullBiFunction<? super String, ? super ProgressIndicator, ? extends File, ? extends IOException> downloadFunction = null;
     Path bundledPluginPath = null;
@@ -738,108 +743,81 @@ public final class ConfigImportHelper {
                        @NotNull ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     if (Files.isRegularFile(oldConfigDir)) {
-      new Decompressor.Zip(oldConfigDir).extract(newConfigDir);
+      new Decompressor.Zip(oldConfigDir.toFile()).extract(newConfigDir);
       return;
     }
 
-    // Copy everything except plugins.
-    // The filter prevents web token reuse and accidental overwrite of files already created by this instance (port/lock/tokens etc.).
-    Files.walkFileTree(oldConfigDir, new SimpleFileVisitor<>() {
-      @Override
-      public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
-        return blockImport(dir, oldConfigDir, newConfigDir, oldPluginsDir) ? FileVisitResult.SKIP_SUBTREE : FileVisitResult.CONTINUE;
-      }
+    // copy everything except plugins
+    // the filter prevents web token reuse and accidental overwrite of files already created by this instance (port/lock/tokens etc.)
+    FileUtil.copyDir(oldConfigDir.toFile(), newConfigDir.toFile(), file -> !blockImport(file.toPath(), oldConfigDir, newConfigDir, oldPluginsDir));
 
-      @Override
-      public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-        if (!blockImport(file, oldConfigDir, newConfigDir, oldPluginsDir)) {
-          Path target = newConfigDir.resolve(oldConfigDir.relativize(file));
-          NioFiles.createDirectories(target.getParent());
-          Files.copy(file, target, LinkOption.NOFOLLOW_LINKS);
-        }
-        return FileVisitResult.CONTINUE;
-      }
-    });
+    List<StartupActionScriptManager.ActionCommand> actionCommands = loadStartupActionScript(oldConfigDir, oldIdeHome, oldPluginsDir);
 
-    List<ActionCommand> actionCommands = loadStartupActionScript(oldConfigDir, oldIdeHome, oldPluginsDir);
-
-    // copying plugins, unless the target directory is not empty (the plugin manager will sort out incompatible ones)
-    boolean importBundledPlugins = options.importSettings != null && options.importSettings.shouldImportBundledPlugins();
-    if (!options.importPlugins && !importBundledPlugins) {
+    // copy plugins, unless new plugin directory is not empty (the plugin manager will sort out incompatible ones)
+    if (!options.importPlugins) {
       log.info("plugins are not imported.");
     }
-    else if (options.importPlugins && !Files.isDirectory(oldPluginsDir)) {
+    else if (!Files.isDirectory(oldPluginsDir)) {
       log.info("non-existing plugins directory: " + oldPluginsDir);
     }
     else if (!isEmptyDirectory(newPluginsDir)) {
       log.info("non-empty plugins directory: " + newPluginsDir);
     }
     else {
-      migratePlugins(oldPluginsDir, newPluginsDir, oldConfigDir, actionCommands, options);
+      migratePlugins(oldPluginsDir, newPluginsDir, actionCommands, options);
     }
 
     if (SystemInfo.isMac && (PlatformUtils.isIntelliJ() || "AndroidStudio".equals(PlatformUtils.getPlatformPrefix()))) {
       setKeymapIfNeeded(oldConfigDir, newConfigDir, log);
     }
 
-    // applying prepared updates to copied plugins
+    // apply stale plugin updates
     StartupActionScriptManager.executeActionScriptCommands(actionCommands, oldPluginsDir, newPluginsDir);
-
     updateVMOptions(newConfigDir, log);
   }
 
-  private static List<ActionCommand> loadStartupActionScript(Path oldConfigDir, @Nullable Path oldIdeHome, Path oldPluginsDir) throws IOException {
-    if (Files.isDirectory(oldPluginsDir)) {
-      Path oldSystemDir = oldConfigDir.getParent().resolve(SYSTEM);
-      if (!Files.isDirectory(oldSystemDir)) {
-        oldSystemDir = null;
-        if (oldIdeHome != null) {
-          oldSystemDir = getSettingsPath(oldIdeHome, PathManager.PROPERTY_SYSTEM_PATH, ConfigImportHelper::defaultSystemPath);
-        }
-        if (oldSystemDir == null) {
-          oldSystemDir = oldConfigDir.getFileSystem().getPath(defaultSystemPath(getNameWithVersion(oldConfigDir)));
-        }
+  private static @NotNull List<StartupActionScriptManager.ActionCommand> loadStartupActionScript(Path oldConfigDir,
+                                                                                                 @Nullable Path oldIdeHome,
+                                                                                                 Path oldPluginsDir) throws IOException {
+    if (!Files.isDirectory(oldPluginsDir)) {
+      return Collections.emptyList();
+    }
+
+    Path oldSystemDir = oldConfigDir.getParent().resolve(SYSTEM);
+    if (!Files.isDirectory(oldSystemDir)) {
+      oldSystemDir = null;
+      if (oldIdeHome != null) {
+        oldSystemDir = getSettingsPath(oldIdeHome, PathManager.PROPERTY_SYSTEM_PATH, ConfigImportHelper::defaultSystemPath);
       }
-      Path script = oldSystemDir.resolve(PLUGINS + '/' + StartupActionScriptManager.ACTION_SCRIPT_FILE);  // PathManager#getPluginTempPath
-      if (Files.isRegularFile(script)) {
-        return StartupActionScriptManager.loadActionScript(script);
+      if (oldSystemDir == null) {
+        oldSystemDir = oldConfigDir.getFileSystem().getPath(defaultSystemPath(getNameWithVersion(oldConfigDir)));
       }
     }
-    return List.of();
+    Path script = oldSystemDir.resolve(PLUGINS + '/' + StartupActionScriptManager.ACTION_SCRIPT_FILE);  // PathManager#getPluginTempPath
+    return StartupActionScriptManager.loadActionScript(script);
   }
 
   private static void migratePlugins(Path oldPluginsDir,
                                      Path newPluginsDir,
-                                     Path oldConfigDir,
-                                     List<ActionCommand> actionCommands,
+                                     List<? extends StartupActionScriptManager.ActionCommand> actionCommands,
                                      ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     try {
-      List<IdeaPluginDescriptor> pluginsToMigrate = new ArrayList<>();
-      List<IdeaPluginDescriptor> pluginsToDownload = new ArrayList<>();
-      List<PluginId> pendingUpdates;
-      if (options.importPlugins) {
-        pendingUpdates = collectPendingPluginUpdates(actionCommands, options);
-        PluginDescriptorLoader.getDescriptorsToMigrate(oldPluginsDir,
-                                                       options.compatibleBuildNumber,
-                                                       options.bundledPluginPath,
-                                                       options.brokenPluginVersions,
-                                                       pluginsToMigrate,
-                                                       pluginsToDownload);
+      List<IdeaPluginDescriptorImpl> pluginsToMigrate = new ArrayList<>();
+      List<IdeaPluginDescriptorImpl> incompatiblePlugins = new ArrayList<>();
+      List<PluginId> pendingUpdates = collectPendingPluginUpdates(actionCommands, options);
+      PluginDescriptorLoader.getDescriptorsToMigrate(oldPluginsDir,
+                                                     options.compatibleBuildNumber,
+                                                     options.bundledPluginPath,
+                                                     options.brokenPluginVersions,
+                                                     pluginsToMigrate,
+                                                     incompatiblePlugins);
 
-        migratePlugins(newPluginsDir, pluginsToMigrate, pendingUpdates, log);
-      } else {
-        pendingUpdates = new ArrayList<>();
-        log.info("non-bundled plugins are not imported.");
-      }
+      migratePlugins(newPluginsDir, pluginsToMigrate, pendingUpdates, log);
 
-      if (options.importSettings != null && options.importSettings.shouldImportBundledPlugins()) {
-        collectBundledPluginsToDownload(oldConfigDir, pluginsToDownload, options.importSettings);
-      }
-
-      if (!pluginsToDownload.isEmpty()) {
+      if (!incompatiblePlugins.isEmpty()) {
         if (options.headless) {
-          downloadUpdatesForIncompatiblePlugins(newPluginsDir, options, pluginsToDownload, pendingUpdates, new EmptyProgressIndicator());
+          downloadUpdatesForIncompatiblePlugins(newPluginsDir, options, incompatiblePlugins, pendingUpdates, new EmptyProgressIndicator());
         }
         else {
           ConfigImportProgressDialog dialog = new ConfigImportProgressDialog();
@@ -848,16 +826,15 @@ public final class ConfigImportHelper {
 
           SplashManager.executeWithHiddenSplash(dialog, () -> {
             new Thread(() -> {
-              downloadUpdatesForIncompatiblePlugins(newPluginsDir, options, pluginsToDownload, pendingUpdates, dialog.getIndicator());
+              downloadUpdatesForIncompatiblePlugins(newPluginsDir, options, incompatiblePlugins, pendingUpdates, dialog.getIndicator());
               SwingUtilities.invokeLater(() -> dialog.setVisible(false));
             }, "Plugin migration downloader").start();
 
             dialog.setVisible(true);
           });
         }
-
-        // migrating plugins for which we weren't able to download updates
-        migratePlugins(newPluginsDir, pluginsToDownload, pendingUpdates, log);
+        // Migrate plugins for which we couldn't download updates
+        migratePlugins(newPluginsDir, incompatiblePlugins, pendingUpdates, log);
       }
     }
     catch (ExecutionException | InterruptedException e) {
@@ -866,11 +843,10 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static List<PluginId> collectPendingPluginUpdates(List<ActionCommand> commands, ConfigImportOptions options) {
-    if (commands.isEmpty()) return List.of();
-
+  private static List<PluginId> collectPendingPluginUpdates(List<? extends StartupActionScriptManager.ActionCommand> commands,
+                                                            ConfigImportOptions options) {
     List<PluginId> result = new ArrayList<>();
-    for (ActionCommand command : commands) {
+    for (StartupActionScriptManager.ActionCommand command : commands) {
       String source;
       if (command instanceof StartupActionScriptManager.CopyCommand) {
         source = ((StartupActionScriptManager.CopyCommand)command).getSource();
@@ -881,6 +857,7 @@ public final class ConfigImportHelper {
       else {
         continue;
       }
+
       try {
         IdeaPluginDescriptorImpl descriptor = PluginDescriptorLoader.loadDescriptorFromArtifact(Paths.get(source), null);
         if (descriptor != null) {
@@ -898,18 +875,15 @@ public final class ConfigImportHelper {
   }
 
   private static void migratePlugins(Path newPluginsDir,
-                                     List<IdeaPluginDescriptor> pluginsToMigrate,
+                                     List<IdeaPluginDescriptorImpl> pluginsToMigrate,
                                      List<PluginId> idsToSkip,
                                      Logger log) throws IOException {
-    for (IdeaPluginDescriptor descriptor : pluginsToMigrate) {
+    for (IdeaPluginDescriptorImpl descriptor : pluginsToMigrate) {
       if (idsToSkip.contains(descriptor.getPluginId())) {
         log.info("Skipping migration of plugin " + descriptor.getPluginId() + " because there's a pending update for it");
         continue;
       }
       log.info("Migrating plugin " + descriptor.getPluginId() + " version " + descriptor.getVersion());
-      if (descriptor.getPluginPath() == null) {
-        continue;
-      }
       File path = descriptor.getPluginPath().toFile();
       if (path.isDirectory()) {
         FileUtil.copyDir(path, new File(newPluginsDir.toFile(), path.getName()));
@@ -922,12 +896,12 @@ public final class ConfigImportHelper {
 
   private static void downloadUpdatesForIncompatiblePlugins(Path newPluginsDir,
                                                             ConfigImportOptions options,
-                                                            List<IdeaPluginDescriptor> incompatiblePlugins,
+                                                            List<IdeaPluginDescriptorImpl> incompatiblePlugins,
                                                             List<PluginId> pendingUpdates,
                                                             ProgressIndicator indicator) {
     Logger log = options.log;
-    for (Iterator<IdeaPluginDescriptor> iterator = incompatiblePlugins.iterator(); iterator.hasNext(); ) {
-      IdeaPluginDescriptor plugin = iterator.next();
+    for (Iterator<IdeaPluginDescriptorImpl> iterator = incompatiblePlugins.iterator(); iterator.hasNext(); ) {
+      IdeaPluginDescriptorImpl plugin = iterator.next();
       if (pendingUpdates.contains(plugin.getPluginId())) {
         log.info("Skipping download of compatible version for plugin with pending update: " + plugin.getPluginId());
         iterator.remove();
@@ -958,7 +932,7 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static boolean isBrokenPlugin(IdeaPluginDescriptor plugin, ConfigImportOptions options) {
+  private static boolean isBrokenPlugin(IdeaPluginDescriptorImpl plugin, ConfigImportOptions options) {
     Map<PluginId, Set<String>> versions = options.brokenPluginVersions;
     return versions != null ? versions.get(plugin.getPluginId()).contains(plugin.getVersion()) : PluginManagerCore.isBrokenPlugin(plugin);
   }
@@ -979,102 +953,63 @@ public final class ConfigImportHelper {
   static void setKeymapIfNeeded(@NotNull Path oldConfigDir, @NotNull Path newConfigDir, @NotNull Logger log) {
     String nameWithVersion = getNameWithVersion(oldConfigDir);
     Matcher m = Pattern.compile("\\.?[^\\d]+(\\d+\\.\\d+)?").matcher(nameWithVersion);
-    if (m.matches() && VersionComparatorUtil.compare("2019.1", m.group(1)) >= 0) {
-      String keymapFileSpec = StoreUtilKt.getDefaultStoragePathSpec(KeymapManagerImpl.class);
-      if (keymapFileSpec != null) {
-        Path keymapOptionFile = newConfigDir.resolve(OPTIONS_DIRECTORY).resolve(keymapFileSpec);
-        if (!Files.exists(keymapOptionFile)) {
-          try {
-            Files.createDirectories(keymapOptionFile.getParent());
-            Files.writeString(keymapOptionFile, ("<application>\n" +
-                                                 "  <component name=\"KeymapManager\">\n" +
-                                                 "    <active_keymap name=\"Mac OS X\" />\n" +
-                                                 "  </component>\n" +
-                                                 "</application>"));
-          }
-          catch (IOException e) {
-            log.error("Cannot set keymap", e);
-          }
-        }
-      }
+    if (!m.matches() || VersionComparatorUtil.compare("2019.1", m.group(1)) < 0) {
+      return;
+    }
+
+    String keymapFileSpec = StoreUtilKt.getDefaultStoragePathSpec(KeymapManagerImpl.class);
+    Path keymapOptionFile = newConfigDir.resolve(OPTIONS_DIRECTORY).resolve(keymapFileSpec);
+    if (Files.exists(keymapOptionFile)) {
+      return;
+    }
+
+    try {
+      Files.createDirectories(keymapOptionFile.getParent());
+      Files.write(keymapOptionFile, ("<application>\n" +
+                                    "  <component name=\"KeymapManager\">\n" +
+                                    "    <active_keymap name=\"Mac OS X\" />\n" +
+                                    "  </component>\n" +
+                                    "</application>").getBytes(StandardCharsets.UTF_8));
+    }
+    catch (IOException e) {
+      log.error("Cannot set keymap", e);
     }
   }
 
-  /* Fix VM options in the custom *.vmoptions file that won't work with the current IDE version or duplicate/undercut platform ones. */
+  /* Fix VM options in the custom *.vmoptions file that won't work with the current IDE version. */
   private static void updateVMOptions(Path newConfigDir, Logger log) {
-    Path vmOptionsFile = newConfigDir.resolve(VMOptions.getFileName());
+    Path vmOptionsFile = newConfigDir.resolve(VMOptions.getCustomVMOptionsFileName());
     if (Files.exists(vmOptionsFile)) {
       try {
-        List<String> lines = Files.readAllLines(vmOptionsFile, VMOptions.getFileCharset());
-        Path platformVmOptionsFile = newConfigDir.getFileSystem().getPath(VMOptions.getPlatformOptionsFile().toString());
-        Collection<String> platformLines = new LinkedHashSet<>(readPlatformOptions(platformVmOptionsFile, log));
+        List<String> lines = Files.readAllLines(vmOptionsFile);
         boolean updated = false;
-
         for (ListIterator<String> i = lines.listIterator(); i.hasNext(); ) {
           String line = i.next().trim();
           if (line.equals("-XX:MaxJavaStackTraceDepth=-1")) {
             i.set("-XX:MaxJavaStackTraceDepth=10000"); updated = true;
           }
-          else if ("-XX:+UseConcMarkSweepGC".equals(line) ||
-                   "-Xverify:none".equals(line) || "-noverify".equals(line) ||
-                   "-XX:+UseCompressedOops".equals(line) ||
+          // Android Studio: b/168557697
+          else if (line.equals("-XX:+UseConcMarkSweepGC") || line.equals("-XX:UseG1GC")) {
+              i.remove(); updated = true;
+          }
+          else if ("-Xverify:none".equals(line) || "-noverify".equals(line) ||
                    line.startsWith("-agentlib:yjpagent") ||
-                   line.startsWith("-agentpath:") && line.contains("yjpagent") ||
-                   "-Dsun.io.useCanonPrefixCache=false".equals(line) ||
-                   "-Dfile.encoding=UTF-8".equals(line) && SystemInfo.isMac ||
-                   isDuplicateOrLowerValue(line, platformLines)) {
+                   line.startsWith("-agentpath:") && line.contains("yjpagent")) {
             i.remove(); updated = true;
           }
         }
-
+        // Android Studio: b/168557697
+        if (lines.stream().noneMatch(line -> line.equals("-XX:+IgnoreUnrecognizedVMOptions"))) {
+            lines.add("-XX:+IgnoreUnrecognizedVMOptions");
+        }
         if (updated) {
-          Files.write(vmOptionsFile, lines, VMOptions.getFileCharset());
+          Files.write(vmOptionsFile, lines);
         }
       }
       catch (IOException e) {
         log.warn("Failed to update custom VM options file " + vmOptionsFile, e);
       }
     }
-  }
-
-  private static List<String> readPlatformOptions(Path platformVmOptionsFile, Logger log) {
-    try {
-      return Files.readAllLines(platformVmOptionsFile, VMOptions.getFileCharset());
-    }
-    catch (IOException e) {
-      // should not prevent a user's VM options file from being processed
-      log.warn("Cannot read platform VM options file " + platformVmOptionsFile, e);
-      return List.of();
-    }
-  }
-
-  private static boolean isDuplicateOrLowerValue(String line, Collection<String> platformLines) {
-    if (platformLines.isEmpty()) {
-      return false;
-    }
-    if (platformLines.contains(line)) {
-      return true;
-    }
-    if (line.startsWith("-Xms") || line.startsWith("-Xmx") || line.startsWith("-Xss")) {
-      return isLowerValue(line.substring(0, 4), line.substring(4), platformLines);
-    }
-    if (line.startsWith("-XX:")) {
-      int p = line.indexOf('=', 4);
-      if (p > 0) return isLowerValue(line.substring(0, p + 1), line.substring(p + 1), platformLines);
-    }
-    return false;
-  }
-
-  private static boolean isLowerValue(String prefix, String userValue, Collection<String> platformLines) {
-    for (String line : platformLines) {
-      if (line.startsWith(prefix)) {
-        try {
-          return VMOptions.parseMemoryOption(userValue) <= VMOptions.parseMemoryOption(line.substring(prefix.length()));
-        }
-        catch (IllegalArgumentException ignored) { }
-      }
-    }
-    return false;
   }
 
   private static boolean blockImport(Path path, Path oldConfig, Path newConfig, Path oldPluginsDir) {
@@ -1087,8 +1022,8 @@ public final class ConfigImportHelper {
     return false;
   }
 
-  private static boolean shouldSkipFileDuringImport(String fileName) {
-    List<String> filesToSkip = Arrays.asList(PORT_FILE, PORT_LOCK_FILE, TOKEN_FILE, USER_WEB_TOKEN, BundledPluginsState.BUNDLED_PLUGINS_FILENAME);
+  private static boolean shouldSkipFileDuringImport(@NotNull String fileName) {
+    List<String> filesToSkip = Arrays.asList(PORT_FILE, PORT_LOCK_FILE, TOKEN_FILE, USER_WEB_TOKEN);
     return filesToSkip.contains(fileName) || fileName.startsWith(CHROME_USER_DATA);
   }
 
@@ -1159,20 +1094,5 @@ public final class ConfigImportHelper {
     }
 
     return result;
-  }
-
-  private static void collectBundledPluginsToDownload(Path configDir,
-                                                      List<IdeaPluginDescriptor> pluginsToDownload,
-                                                      @NotNull ConfigImportSettings settings) {
-    @Nullable List<kotlin.Pair<PluginId, @Nullable String>> plugins = BundledPluginsState.getBundledPlugins(configDir);
-    if (plugins != null) {
-      // pairs of PluginId to Category
-      for (kotlin.Pair<PluginId, @Nullable String> plugin : plugins) {
-        if (settings.shouldImport(plugin.getFirst(), plugin.getSecond())) {
-          PluginNode pluginNode = new PluginNode(plugin.getFirst());
-          pluginsToDownload.add(pluginNode);
-        }
-      }
-    }
   }
 }
