@@ -3,22 +3,16 @@
 package com.intellij.ui.plaf.beg;
 
 import com.intellij.ide.ui.UISettings;
-import com.intellij.ide.ui.laf.intellij.IdeaPopupMenuUI;
 import com.intellij.internal.statistic.collectors.fus.actions.persistence.MainMenuCollector;
 import com.intellij.openapi.actionSystem.ActionPlaces;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.impl.ActionMenuItem;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.keymap.KeymapUtil;
-import com.intellij.openapi.ui.GraphicsConfig;
 import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.SystemInfoRt;
-import com.intellij.openapi.util.registry.Registry;
-import com.intellij.ui.ExperimentalUI;
 import com.intellij.util.IconUtil;
-import com.intellij.util.ui.GraphicsUtil;
-import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.UIUtil;
 import org.jetbrains.annotations.NonNls;
@@ -48,7 +42,6 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
   private static final Rectangle j = new Rectangle();
   private static final Rectangle d = new Rectangle();
   private int myMaxGutterIconWidth;
-  private int myMaxGutterIconWidth2;
   private int a;
   private static Rectangle i = new Rectangle();
   private int k;
@@ -69,7 +62,7 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
   }
 
   public BegMenuItemUI() {
-    myMaxGutterIconWidth2 = myMaxGutterIconWidth = 18;
+    myMaxGutterIconWidth = 18;
 
     if (UIUtil.isUnderAquaBasedLookAndFeel() && myAquaSelectedBackgroundPainter == null) {
       myAquaSelectedBackgroundPainter = (Border) UIManager.get("MenuItem.selectedBackgroundPainter");
@@ -82,7 +75,7 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
     final String propertyPrefix = getPropertyPrefix();
     Integer integer = UIUtil.getPropertyMaxGutterIconWidth(propertyPrefix);
     if (integer != null){
-      myMaxGutterIconWidth2 = myMaxGutterIconWidth = integer.intValue();
+      myMaxGutterIconWidth = integer.intValue();
     }
 
     selectionBackground = UIUtil.getListSelectionBackground(true);
@@ -95,26 +88,14 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
     return model.isArmed() || (item instanceof JMenu) && model.isSelected();
   }
 
-  private void checkArrowIcon() {
-    if (arrowIcon != null && IdeaPopupMenuUI.isPartOfPopupMenu(menuItem)) {
-      arrowIcon = null;
-    }
-  }
-
-  private void checkEmptyIcon(JComponent comp) {
-    myMaxGutterIconWidth = getAllowedIcon() == null && IdeaPopupMenuUI.hideEmptyIcon(comp) ? 0 : myMaxGutterIconWidth2;
-  }
-
   @Override
   public void paint(Graphics g, JComponent comp) {
-    checkArrowIcon();
     UISettings.setupAntialiasing(g);
     JMenuItem jmenuitem = (JMenuItem)comp;
     ButtonModel buttonmodel = jmenuitem.getModel();
     int mnemonicIndex = jmenuitem.getDisplayedMnemonicIndex();
     Icon icon1 = getIcon();
     Icon icon2 = getAllowedIcon();
-    checkEmptyIcon(comp);
     int j1 = jmenuitem.getWidth();
     int k1 = jmenuitem.getHeight();
     Insets insets = comp.getInsets();
@@ -137,17 +118,12 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
       g.fillRect(0, 0, j1, k1);
       if (isSelected(jmenuitem)) {
         g.setColor(selectionBackground);
-        if (icon2 != null && !(StartupUiUtil.isUnderDarcula() || UIUtil.isUnderIntelliJLaF())) {
+        if (icon2 != null && !(StartupUiUtil.isUnderDarcula() || UIUtil.isUnderIntelliJLaF())){
           g.fillRect(k, 0, j1 - k, k1);
         }
-        else if (IdeaPopupMenuUI.isPartOfPopupMenu(comp) && (Registry.is("popup.menu.roundSelection.enabled", false) || ExperimentalUI.isNewUI())) {
-          GraphicsConfig config = GraphicsUtil.setupAAPainting(g);
-          int radius = JBUI.getInt("MenuItem.Selection.arc", 8);
-          g.fillRoundRect(4, 1, j1 - 8, k1 - 2, radius, radius);
-          config.restore();
-        }
-        else {
+        else{
           g.fillRect(0, 0, j1, k1);
+          g.setColor(selectionBackground);
         }
       }
       g.setColor(color2);
@@ -156,23 +132,23 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
       if (isSelected(jmenuitem)) {
         g.setColor(selectionForeground);
       }
-      else {
+      else{
         g.setColor(jmenuitem.getForeground());
       }
       if (useCheckAndArrow()) {
         IconUtil.paintSelectionAwareIcon(icon2, jmenuitem, g, h.x, h.y, isSelected(jmenuitem));
       }
       g.setColor(color2);
-      if (menuItem.isArmed()) {
+      if (menuItem.isArmed()){
         drawIconBorder(g);
       }
     }
-    if (icon1 != null) {
+    if (icon1 != null){
       if (!buttonmodel.isEnabled()){
         icon1 = jmenuitem.getDisabledIcon();
       }
       else
-        if (buttonmodel.isPressed() && buttonmodel.isArmed()) {
+        if (buttonmodel.isPressed() && buttonmodel.isArmed()){
           icon1 = jmenuitem.getPressedIcon();
           if (icon1 == null){
             icon1 = jmenuitem.getIcon();
@@ -182,8 +158,8 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
         IconUtil.paintSelectionAwareIcon(icon1, jmenuitem, g, l.x, l.y, isSelected(jmenuitem));
       }
     }
-    if (s1 != null && s1.length() > 0) {
-      if (buttonmodel.isEnabled()) {
+    if (s1 != null && s1.length() > 0){
+      if (buttonmodel.isEnabled()){
         if (isSelected(jmenuitem)) {
           g.setColor(selectionForeground);
         }
@@ -206,7 +182,7 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
         }
       }
     }
-    if (keyStrokeText != null && !keyStrokeText.isEmpty()) {
+    if (keyStrokeText != null && !keyStrokeText.isEmpty()){
       g.setFont(acceleratorFont);
       if (buttonmodel.isEnabled()){
         if (UIUtil.isUnderAquaBasedLookAndFeel() && isSelected(jmenuitem)) {
@@ -220,21 +196,21 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
             g.setColor(acceleratorForeground);
           }
         }
-        BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics1.getAscent());
+        BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics.getAscent());
       }
       else
-        if (disabledForeground != null) {
+        if (disabledForeground != null){
           g.setColor(disabledForeground);
-          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics1.getAscent());
+          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics.getAscent());
         }
-        else {
+        else{
           g.setColor(jmenuitem.getBackground().brighter());
-          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics1.getAscent());
+          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x, c.y + fontmetrics.getAscent());
           g.setColor(jmenuitem.getBackground().darker());
-          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x - 1, (c.y + fontmetrics1.getAscent()) - 1);
+          BasicGraphicsUtils.drawString(g, keyStrokeText, 0, c.x - 1, (c.y + fontmetrics.getAscent()) - 1);
         }
     }
-    if (arrowIcon != null) {
+    if (arrowIcon != null){
       if (isSelected(jmenuitem)) {
         g.setColor(selectionForeground);
       }
@@ -262,7 +238,7 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
           try {
             Class<?> appleLaf = Class.forName(AQUA_LOOK_AND_FEEL_CLASS_NAME);
             Method getModifiers = appleLaf.getMethod(GET_KEY_MODIFIERS_TEXT, int.class, boolean.class);
-            s1 = (String)getModifiers.invoke(appleLaf, new Object[] {Integer.valueOf(j1), Boolean.FALSE});
+            s1 = (String)getModifiers.invoke(appleLaf, new Object[] {new Integer(j1), Boolean.FALSE});
           }
           catch (Exception e) {
             s1 = KeymapUtil.getKeyModifiersTextForMacOSLeopard(j1);
@@ -376,7 +352,7 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
 
     // Position the Accelerator text rect
 
-    acceleratorRect.x += viewRect.width - arrowIconRect.width - (arrowIconRect.width > 0 ? menuItemGap : 0) - acceleratorRect.width;
+    acceleratorRect.x += viewRect.width - arrowIconRect.width - menuItemGap - acceleratorRect.width;
     acceleratorRect.y = (viewRect.y + viewRect.height / 2) - acceleratorRect.height / 2;
 
     // Position the Check and Arrow Icons
@@ -408,11 +384,9 @@ public final class BegMenuItemUI extends BasicMenuItemUI {
 
   @Override
   public Dimension getPreferredSize(JComponent comp) {
-    checkArrowIcon();
     JMenuItem jmenuitem = (JMenuItem)comp;
     Icon icon1 = getIcon();
     Icon icon2 = getAllowedIcon();
-    checkEmptyIcon(comp);
     String text = jmenuitem.getText();
     String keyStrokeText = getKeyStrokeText(jmenuitem);
     Font font = jmenuitem.getFont();
