@@ -8,6 +8,7 @@ import com.intellij.util.indexing.containers.ChangeBufferingList;
 import com.intellij.util.indexing.containers.IntIdsIterator;
 import com.intellij.util.io.DataExternalizer;
 import com.intellij.util.io.DataInputOutputUtil;
+import gnu.trove.THashMap;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -15,7 +16,10 @@ import org.jetbrains.annotations.Nullable;
 import java.io.DataInputStream;
 import java.io.DataOutput;
 import java.io.IOException;
-import java.util.*;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.function.IntPredicate;
 
 /**
@@ -146,7 +150,7 @@ public final class ValueContainerImpl<Value> extends UpdatableValueContainer<Val
         Object inputIdMappingValue = mapping.get(mappingValue);
         // prevent NPEs on file set due to Value class being mutable or having inconsistent equals wrt disk persistence
         // (instance that is serialized and new instance created with deserialization from the same bytes are expected to be equal)
-        myInputIdMappingValue = inputIdMappingValue != null ? inputIdMappingValue : Integer.valueOf(0);
+        myInputIdMappingValue = inputIdMappingValue != null ? inputIdMappingValue : new Integer(0);
       }
     }
   }
@@ -325,10 +329,11 @@ public final class ValueContainerImpl<Value> extends UpdatableValueContainer<Val
       ValueToInputMap<Value> mapping = asMapping();
       if (mapping != null) {
         final ValueToInputMap<Value> cloned = mapping.clone();
-        cloned.forEach((key, val) -> {
+        cloned.forEachEntry((key, val) -> {
           if (val instanceof ChangeBufferingList) {
             cloned.put(key, ((ChangeBufferingList)val).clone());
           }
+          return true;
         });
 
         clone.myInputIdMapping = cloned;
@@ -575,7 +580,7 @@ public final class ValueContainerImpl<Value> extends UpdatableValueContainer<Val
   private static final IntPredicate EMPTY_PREDICATE = __ -> false;
 
   // a class to distinguish a difference between user-value with THashMap type and internal value container
-  private static final class ValueToInputMap<Value> extends HashMap<Value, Object> {
+  private static final class ValueToInputMap<Value> extends THashMap<Value, Object> {
     ValueToInputMap(int size) {
       super(size);
     }
